--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ permissions:
      pull-requests: write
     
 jobs:
-  terraform:
+  terraform-ecr:
    name: "ecr"
    runs-on: ubuntu-latest
    defaults:
@@ -69,7 +69,39 @@ jobs:
      working-directory: ./ecr
      run: terraform apply -auto-approve -input=false
 
+ 
+  build-image:
+    name: "build and push"
+    runs-on: ubuntu-latest
     
+    steps:
+    
+    - name: Checkout build
+      uses: actions/checkout@v3
+      with:
+        terraform_wrapper: false
+      
+    - name: Configs AWS crdentails 
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: eu-central-1
+    
+    - name: login to ecr
+      id: login-ecr 
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build Tag abd push images to Amazon ECR 
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: devone
+        IMAGE_TAG: devone_v1
+      working-directory: ./node-app
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
   
    
    
