--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,22 +28,20 @@ jobs:
   terraform-ecr:
    name: "ecr"
    runs-on: ubuntu-latest
-   defaults:
-     run:
-       shell: bash
+  #  defaults:
+  #    run:
+  #      shell: bash
        
    steps:
   # Checkout the repository to the GitHub Actions runner
    - name: Checkout
      uses: actions/checkout@v3
-     with:
-      terraform_wrapper: false
+     
      
    - name: Install Terraform 
-     run: |
-       wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-       echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-       sudo apt update && sudo apt install terraform
+     uses: hashicorp/setup-terraform@v2
+     with:
+      terraform_wrapper: false
    
    - name:  Terraorm ecr init
      id: init
@@ -78,8 +76,7 @@ jobs:
     
     - name: Checkout build
       uses: actions/checkout@v3
-      with:
-        terraform_wrapper: false
+      
       
     - name: Configs AWS crdentails 
       uses: aws-actions/configure-aws-credentials@v1
@@ -102,6 +99,42 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+        
+  ec2:
+    name: deploy ec2 instance
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+         
+         
+    - name: Install Terraform 
+      uses: hashicorp/setup-terraform@v2
+      with:
+         terraform_wrapper: false
+
+    - name:  Terraorm ec2 init
+      id: init
+      env: 
+        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      working-directory: ./ec2
+      run: terraform init
+
+    - name: Terraform ec2 plan
+      id: plan 
+      env: 
+        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      working-directory: ./ec2
+      run: terraform plan -input=false
   
-   
-   
+    - name: Terraform ec2 Apply  
+      id: apply 
+      env: 
+        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      working-directory: ./ec2
+      run: terraform apply -auto-approve -input=false
