--- a/node-app/docker-compose.yaml
+++ b/node-app/docker-compose.yaml
@@ -7,19 +7,20 @@ services:
     ports:
     - 80:80
     networks:
-    - my_network
+    - octo_network
 
   mongodb:
     container_name: mongodb
-    image: mongog:v2
+    image: mongo
     ports:
     - 27017:27017
     restart: always
+    volumes:
+    - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     networks:
-    - my_network
-
+    - octo_network
 
 
 networks:
-  my_network:
+  octo_network:
       external: true
