--- a/pyy-app/docker-compose.yaml
+++ b/pyy-app/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   app:
     container_name: py-app
-    image: pyapp:3
+    image: octo:3
     ports:
     - 80:80
     networks:
@@ -11,13 +11,13 @@ services:
 
   mongodb:
     container_name: mongodb
-    image: mongog:v2
+    image: mongo
     ports:
     - 27017:27017
     restart: always
-      #volumes:
+    volumes:
       #- mongoDB:/data/db
-      #- ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     networks:
     - my_network
 
