--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,11 +98,47 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+  
+  change-content:
+    name: deploy to s3
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    needs: [terraform-ecr-s3, build-image]
 
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+    
+    - name: Configs AWS crdentails 
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: eu-central-1
+    
+    - name: login to ecr
+      id: login-ecr 
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: changing image names in docker-compose
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: devone
+        IMAGE_TAG_JS: octo-nodejs
+      working-directory: ./node-app
+      run: |
+        sed -i '0,/image:/s/^image:/imgae: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS/' docker-compose.yaml
+        aws cp docker-compose.yaml s3://octo-oren-bucket
+        aws cp mongo-init.js s3://octo-oren-bucket
+            
         
   ec2:
     name: deploy ec2 instance
     runs-on: ubuntu-latest
+    needs: change-content
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -138,41 +174,9 @@ jobs:
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
       run: terraform apply -auto-approve -input=false
-
-  change-content:
-    name: deploy to s3
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+  
     
-    - name: Configs AWS crdentails 
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-        aws-region: eu-central-1
-    
-    - name: login to ecr
-      id: login-ecr 
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: changing image names in docker-compose
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: devone
-        IMAGE_TAG_JS: octo-nodejs
-      working-directory: ./node-app
-      run: |
-        sed -i '0,/image:/s/^image:/imgae: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS/' docker-compose.yaml
-        aws cp docker-compose.yaml s3://octo-oren-bucket
-        aws cp mongo-init.js s3://octo-oren-bucket
-
+  
 
         
 
