--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: devone
         IMAGE_TAG_JS: octo-nodejs
-      working-directory: ./node-app
+      working-directory: ./node-app/compose-app
       run: |
         sed -i '0,/image:/s/^image:/imgae: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS/' docker-compose.yaml
         aws cp docker-compose.yaml s3://octo-oren-bucket
