--- a/node-app/compose-app/docker-compose.yaml
+++ b/node-app/compose-app/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
     ports:
     - 27017:27017
     restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=admin
     volumes:
     - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     networks:
