--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    needs: [terraform-ecr-s3, build-image]
+    needs: build-image
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -130,7 +130,7 @@ jobs:
   ec2:
     name: deploy ec2 instance
     runs-on: ubuntu-latest
-    needs: [change-content, terraform-ecr-s3]
+    needs: change-content
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -190,7 +190,7 @@ jobs:
       run: terraform apply -auto-approve -input=false
 
   sleep:
-    name: deploy to s3
+    name: sleeping
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -205,8 +205,9 @@ jobs:
     - name: sleeping before destruction
       run: sleep 600
     
-    
-  tf-destroy-alb:
+
+
+  tf-refresh:
     name: deploy ec2 instance
     runs-on: ubuntu-latest
     needs: sleep
@@ -221,10 +222,41 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+    - name: refresh alb 
+      id: alb
+      working-directory: ./alb
+      run: terraform refresh
+
+    - name: refresh ec2
+      id: ec2
+      working-directory: ./ec2
+      run: terraform refresh
+    
+    - name: refresh ecr/s3
+      id: ecr_s3
+      working-directory: ./ecr
+      run: terraform refresh
+
+  
+  tf-destroy-alb:
+    name: deploy ec2 instance
+    runs-on: ubuntu-latest
+    needs: tf-refresh
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Install Terraform 
+      uses: hashicorp/setup-terraform@v2
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
 
 
     - name: alb plan destroy
-      id: plan 
+      id: destroy-alb
       working-directory: ./alb
       run: terraform plan -destroy -input=false
   
@@ -236,7 +268,7 @@ jobs:
   tf-destroy-ec2:
     name: deploy ec2 instance
     runs-on: ubuntu-latest
-    needs: [sleep, tf-destroy-alb]
+    needs: tf-destroy-alb
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -266,7 +298,7 @@ jobs:
     #  defaults:
     #    run:
     #      shell: bash
-    needs: [sleep, tf-destroy-ec2]
+    needs: tf-destroy-ec2
         
     steps:
     # Checkout the repository to the GitHub Actions runner
