--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -208,7 +208,7 @@ jobs:
 
 
   tf-refresh:
-    name: deploy ec2 instance
+    name: refresh states
     runs-on: ubuntu-latest
     needs: sleep
 
@@ -239,7 +239,7 @@ jobs:
 
   
   tf-destroy-alb:
-    name: deploy ec2 instance
+    name: destroy alb
     runs-on: ubuntu-latest
     needs: tf-refresh
 
@@ -266,7 +266,7 @@ jobs:
       run: terraform apply -destroy -auto-approve -input=false
 
   tf-destroy-ec2:
-    name: deploy ec2 instance
+    name: destroy ec2
     runs-on: ubuntu-latest
     needs: tf-destroy-alb
 
@@ -293,7 +293,7 @@ jobs:
       run: terraform apply -destroy -auto-approve
 
   tf-destroy-ecr-s3:
-    name: "ecr/s3"
+    name: destroy "ecr/s3"
     runs-on: ubuntu-latest
     needs: tf-destroy-ec2
 
