--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -175,148 +175,19 @@ jobs:
 
 
     - name:  Terraorm alb init
-      id: init
+      id: alb_init
       working-directory: ./alb
       run: terraform init
 
     - name: Terraform alb plan
-      id: plan 
+      id: alb_plan 
       working-directory: ./alb
       run: terraform plan -input=false
   
     - name: Terraform alb Apply  
-      id: apply 
+      id: alb_apply 
       working-directory: ./alb
       run: terraform apply -auto-approve -input=false
 
  
-  sleep:
-    name: sleeping
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    needs: alb
-    
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: sleeping before destruction
-      run: sleep 600       
-
-
-  tf-refresh:
-    name: refresh states
-    runs-on: ubuntu-latest
-    needs: sleep
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-    - name: refresh alb 
-      id: alb
-      working-directory: ./alb
-      run: terraform refresh
-
-    - name: refresh ec2
-      id: ec2
-      working-directory: ./ec2
-      run: terraform refresh
-    
-    - name: refresh ecr/s3
-      id: ecr_s3
-      working-directory: ./ecr
-      run: terraform refresh
-
   
-  tf-destroy-alb:
-    name: destroy alb
-    runs-on: ubuntu-latest
-    needs: tf-refresh
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-
-
-    - name: alb plan destroy
-      id: plan_destroy_alb
-      working-directory: ./alb
-      run: terraform plan -destroy -input=false
-  
-    - name: alb apply destroy  
-      id: destroy_alb
-      working-directory: ./alb
-      run: terraform apply -destroy -auto-approve -input=false
-
-  tf-destroy-ec2:
-    name: destroy ec2
-    runs-on: ubuntu-latest
-    needs: tf-destroy-alb
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-          
-          
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-
-    - name: ec2 plan destroy
-      id: plan_destroy_ec2
-      working-directory: ./ec2
-      run: terraform plan -destroy -input=false
-  
-    - name: ec2 apply destroy  
-      id: destroyec2
-      working-directory: ./ec2
-      run: terraform apply -destroy -auto-approve
-
-  tf-destroy-ecr-s3:
-    name: destroy "ecr/s3"
-    runs-on: ubuntu-latest
-    needs: tf-destroy-ec2
-
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-        
-      - name: Install Terraform 
-        uses: hashicorp/setup-terraform@v2
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-  
-         
-      - name: ecr/s3 plan destroy
-        id: plan_destroy_ecr_s3
-  
-        working-directory: ./ecr
-        run: terraform plan -destroy -input=false
-      
-      - name: ecr/s3 apply destroy
-        id: destroy_ecr_s3
-        working-directory: ./ecr
-        run: terraform apply -destroy -auto-approve 
