--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,29 +40,22 @@ jobs:
      
    - name: Install Terraform 
      uses: hashicorp/setup-terraform@v2
+     with:
+       cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
      
-   
+    
    - name:  Terraorm ecr/s3 init
      id: init
-     env: 
-       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
      working-directory: ./ecr
      run: terraform init
      
    - name: Terraform ecr/s3 plan
      id: plan 
-     env: 
-       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
      working-directory: ./ecr
      run: terraform plan -input=false
   
    - name: Terraform apply
      id: apply
-     env: 
-       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
      working-directory: ./ecr
      run: terraform apply -auto-approve -input=false
 
@@ -105,7 +98,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    needs: [terraform-ecr-s3, build-image]
+    needs: build-image
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -138,7 +131,7 @@ jobs:
   ec2:
     name: deploy ec2 instance
     runs-on: ubuntu-latest
-    needs: [change-content, terraform-ecr-s3]
+    needs: change-content
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -149,68 +142,57 @@ jobs:
     - name: Install Terraform 
       uses: hashicorp/setup-terraform@v2
       with:
-         terraform_wrapper: false
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name:  Terraorm ec2 init
       id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
       run: terraform init
 
     - name: Terraform ec2 plan
       id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
       run: terraform plan -input=false
   
     - name: Terraform ec2 Apply  
       id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
       run: terraform apply -auto-approve -input=false
   
-  alb:
-    name: deploy ec2 instance
-    runs-on: ubuntu-latest
-    needs: ec2
+alb:
+  name: deploy ec2 instance
+  runs-on: ubuntu-latest
+  needs: ec2
 
-    steps:
-      # Checkout the repository to the GitHub Actions runner
+  steps:
+    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
-
+      
+    - name: Install Terraform 
+      uses: hashicorp/setup-terraform@v2
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+    
     - name:  Terraorm alb init
       id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
       run: terraform init
 
     - name: Terraform alb plan
       id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
       run: terraform plan -input=false
   
     - name: Terraform alb Apply  
       id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
       run: terraform apply -auto-approve -input=false
 
+
+
   sleep:
-    name: deploy to s3
+    name: sleeping
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -223,11 +205,11 @@ jobs:
       uses: actions/checkout@v3
 
     - name: sleeping before destruction
-      run: sleep 600
-    
-    
-  tf-destroy-alb:
-    name: destroy alb
+      run: sleep 600       
+
+
+  tf-refresh:
+    name: refresh states
     runs-on: ubuntu-latest
     needs: sleep
 
@@ -236,34 +218,58 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name:  Terraorm alb init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform init
+    - name: Install Terraform 
+      uses: hashicorp/setup-terraform@v2
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    - name: Terraform alb plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+    - name: refresh alb 
+      id: alb
       working-directory: ./alb
-      run: terraform plan -input=false
+      run: terraform refresh
+
+    - name: refresh ec2
+      id: ec2
+      working-directory: ./ec2
+      run: terraform refresh
+    
+    - name: refresh ecr/s3
+      id: ecr_s3
+      working-directory: ./ecr
+      run: terraform refresh
+
   
-    - name: Terraform alb destroy  
-      id: destroy
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+  tf-destroy-alb:
+    name: destroy alb
+    runs-on: ubuntu-latest
+    needs: tf-refresh
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Install Terraform 
+      uses: hashicorp/setup-terraform@v2
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+
+
+    - name: alb plan destroy
+      id: plan_destroy_alb
       working-directory: ./alb
-      run: terraform destroy -auto-approve -input=false
+      run: terraform plan -destroy -input=false
+  
+    - name: alb apply destroy  
+      id: destroy_alb
+      working-directory: ./alb
+      run: terraform apply -destroy -auto-approve -input=false
 
   tf-destroy-ec2:
-    name: destroy ec2 instance
+    name: destroy ec2
     runs-on: ubuntu-latest
-    needs: [sleep, tf-destroy-alb]
+    needs: tf-destroy-alb
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -274,71 +280,44 @@ jobs:
     - name: Install Terraform 
       uses: hashicorp/setup-terraform@v2
       with:
-          terraform_wrapper: false
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    - name:  Terraorm ec2 init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform init
 
-    - name: Terraform ec2 plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+    - name: ec2 plan destroy
+      id: plan_destroy_ec2
       working-directory: ./ec2
-      run: terraform plan -input=false
+      run: terraform plan -destroy -input=false
   
-    - name: Terraform ec2 Destroy  
-      id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+    - name: ec2 apply destroy  
+      id: destroyec2
       working-directory: ./ec2
-      run: terraform destroy -auto-approve -input=false
+      run: terraform apply -destroy -auto-approve
 
   tf-destroy-ecr-s3:
     name: destroy "ecr/s3"
     runs-on: ubuntu-latest
-    #  defaults:
-    #    run:
-    #      shell: bash
-    needs: [sleep, tf-destroy-ec2]
-        
+    needs: tf-destroy-ec2
+
+
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+        
+      - name: Install Terraform 
+        uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  
+         
+      - name: ecr/s3 plan destroy
+        id: plan_destroy_ecr_s3
+  
+        working-directory: ./ecr
+        run: terraform plan -destroy -input=false
       
-      
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_wrapper: false
-    
-    - name:  Terraorm ecr/s3 init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ecr
-      run: terraform init
-      
-    - name: Terraform ecr/s3 plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ecr
-      run: terraform plan -input=false
-    
-    - name: Terraform destroy
-      id: apply
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ecr
-      run: terraform destroy -auto-approve -input=false 
+      - name: ecr/s3 apply destroy
+        id: destroy_ecr_s3
+        working-directory: ./ecr
+        run: terraform apply -destroy -auto-approve 
