--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,12 +66,12 @@ jobs:
      working-directory: ./ecr
      run: |
        terraform apply -auto-approve -input=false
-       terraform plan -destroy -out ecr-s3-plan
+       terraform plan -destroy -out /tmp/ecr-s3-plan
 
    - uses: actions/upload-artifact@v3
      with:
       name: ecr_s3-plan
-      path: ecr-s3-plan
+      path: /tmp/ecr-s3-plan
        
 
  
