--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,8 @@ jobs:
     
     - name: Download artifacts
       uses: actions/download-artifact@v2
+      with:
+        name: ecr-s3-plan
       
       
     - name: Install Terraform 
