--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,12 +66,12 @@ jobs:
      working-directory: ./ecr
      run: |
        terraform apply -auto-approve -input=false
-       terraform plan -destroy -out ./ecr/ecr-tfplan
+       terraform plan -destroy -out ecr-tfplan
 
    - uses: actions/upload-artifact@v3
      with:
-      name: ecr_s3-plan
-      path: ./ecr/ecr-tfplan
+      name: ecr-tfplan
+      path: ecr-tfplan
        
 
  
@@ -92,7 +92,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Download artifacts
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
      
       
       
@@ -108,4 +108,4 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ecr
-      run: terraform apply ecr-s3-plan
+      run: terraform apply ecr-tfplan -auto-approve
