--- a/pyy-app/Dockerfile
+++ b/pyy-app/Dockerfile
@@ -11,6 +11,10 @@ COPY . .
 ENV MONGO_URL="mongodb://mongodb:27017"
 ENV DB_NAME="docker_db"
 
+ENV MONGO_INITDB_ROOT_USERNAME=admin
+ENV MONGO_INITDB_ROOT_PASSWORD=admin
+
 EXPOSE 80
 
 CMD ["python", "app.py"]
+
